[package]
name = "client"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vault = {path = "../vault"}
snapshot = {path = "../snapshot"}
crypto = {path = "../crypto"}
random = {path = "../random"}

bincode = "1.3.1"
serde = {version = "1.0.114", features = ["derive"]}