[package]
name = "client"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
vault = {path = "../vault"}
snapshot = {path = "../snapshot"}
crypto = {path = "../crypto"}
random = {path = "../random"}

bincode = "1.3.1"
serde = {version = "1.0.114", features = ["derive"]}
dashmap = "3.11.10"

[dev-dependencies]
actors-rs = {git = "https://github.com/iotaledger/actors.rs/", branch = "dev"}
tokio = { version = "0.3", features = ["full", "time"] }
async-trait = "0.1.40"
serde_json = "1.0"
env_logger = "0.7.1"
log = "0.4"
once_cell = "1.4"
futures = "0.3"
crossbeam-channel = "0.5.0"